# djangodocker

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py
backend/todo/: models.py  router.py  views.py
backend/todo/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue
