[tool.poetry]
name = "djangodocker"
version = "0.1.0"
description = ""
authors = ["JosderMartins <josdermartins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.1"
mysqlclient = "^2.0.1"
docker-compose = "^1.27.3"
djangorestframework = "^3.11.1"
django-cors-headers = "^3.5.0"
djangorestframework-jwt = "^1.11.0"
djoser = "^2.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
